zenfm updates
